adding catcherror-test code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<app-merge-test></app-merge-test>
+<!-- <app-merge-test></app-merge-test> -->
+<app-catcherror-test></app-catcherror-test>
 
 <router-outlet></router-outlet>
