adding return-on-complete component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <!-- <app-merge-test></app-merge-test> -->
-<app-catcherror-test></app-catcherror-test>
+<!-- <app-catcherror-test></app-catcherror-test> -->
+<app-return-on-complete></app-return-on-complete>
 
 <router-outlet></router-outlet>
