adding component zip-test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <!-- <app-merge-test></app-merge-test> -->
 <!-- <app-catcherror-test></app-catcherror-test> -->
-<app-return-on-complete></app-return-on-complete>
+<!-- <app-return-on-complete></app-return-on-complete> -->
+<app-zip-test></app-zip-test>
 
 <router-outlet></router-outlet>
